Updated LinkedIn links, linked to GitHub, and updated classmates

--- a/classmates.html
+++ b/classmates.html
@@ -60,7 +60,8 @@
                 <!-- .navbar -->
 
                 <div class="header-social-links">
-                    <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
+                    <a href="https://www.linkedin.com/in/kyle-gough-709a3754/" class="linkedin"><i class="bi bi-linkedin"></i></a>
+                    <a href="https://github.com/kylegough3" class="github"><i class="bi bi-github"></i></a>
                 </div>
             </div>
         </header>
@@ -78,12 +79,12 @@
                     <div class="row">
                         <div class="col-lg-4 align-items-stretch classmate" data-aos="zoom-in" data-aos-delay="100">
                             <div class="icon-box photo m-1 justify" style="background-image: url(/assets/img/ClassMates/Jace.png)"></div>
-                            <h4><a href="">Jace Cockrell</a></h4>
+                            <h4><a href="http://jacecockrell.com/">Jace Cockrell</a></h4>
                         </div>
 
                         <div class="col-lg-4 align-items-stretch classmate" data-aos="zoom-in" data-aos-delay="100">
                             <div class="icon-box photo m-1" style="background-image: url(/assets/img/ClassMates/andrew.jpg)"></div>
-                            <h4><a href="">Andrew Cocroft</a></h4>
+                            <h4><a href="http://andcroft.com/">Andrew Cocroft</a></h4>
                         </div>
 
                         <div class="col-lg-4 align-items-stretch classmate" data-aos="zoom-in" data-aos-delay="100">
@@ -91,37 +92,37 @@
                                 class="icon-box photo m-1"
                                 style="background-image: url(/assets/img/ClassMates/NDavolt.jpg)"
                             ></div>
-                            <h4><a href="">Nicholas Davolt</a></h4>
+                            <h4><a href="http://www.nicholasdavolt.com/">Nicholas Davolt</a></h4>
                         </div>
 
                         <div class="col-lg-4 align-items-stretch classmate" data-aos="zoom-in" data-aos-delay="100">
-                            <div class="icon-box photo m-1"></div>
+                            <div class="icon-box photo m-1" style="background-image: url(/assets/img/ClassMates/anonymous.jpg)"></div>
 
-                            <h4><a href="">Jake Nobles</a></h4>
-                        </div>
-
-                        <div class="col-lg-4 align-items-stretch classmate" data-aos="zoom-in" data-aos-delay="100">
-                            <div class="icon-box photo" style="background-image: url(/assets/img/ClassMates/rob.jpg)"></div>
-
-                            <h4><a href="">Rob Ritter</a></h4>
+                            <h4><a href="#">Jake Nobles</a></h4>
                         </div>
 
                         <div class="col-lg-4 align-items-stretch classmate" data-aos="zoom-in" data-aos-delay="100">
                             <div class="icon-box photo" style="background-image: url(/assets/img/ClassMates/rob.jpg)"></div>
 
-                            <h4><a href="">Devon Schmidt</a></h4>
+                            <h4><a href="http://www.ritterhaus.net/">Rob Ritter</a></h4>
+                        </div>
+
+                        <div class="col-lg-4 align-items-stretch classmate" data-aos="zoom-in" data-aos-delay="100">
+                            <div class="icon-box photo" style="background-image: url(/assets/img/ClassMates/Devon.jpg)"></div>
+
+                            <h4><a href="http://devschmidt.com/">Devon Schmidt</a></h4>
                         </div>
 
                         <div class="col-lg-4 align-items-stretch classmate" data-aos="zoom-in" data-aos-delay="100">
                             <div class="icon-box photo" style="background-image: url(/assets/img/ClassMates/Cody.jpg)"></div>
 
-                            <h4><a href="">Cody Silvinski</a></h4>
+                            <h4><a href="http://www.codyslivinski.com/">Cody Silvinski</a></h4>
                         </div>
 
                         <div class="col-lg-4 align-items-stretch classmate" data-aos="zoom-in" data-aos-delay="100">
                             <div class="icon-box photo" style="background-image: url(/assets/img/ClassMates/darron.jpg)"></div>
 
-                            <h4><a href="">Darron Werntz</a></h4>
+                            <h4><a href="http://www.werntzdomain.com/">Darron Werntz</a></h4>
                         </div>
                     </div>
                 </div>
