--- a/about.html
+++ b/about.html
@@ -61,6 +61,7 @@
       <div class="header-social-links">
         
         <a href="https://www.linkedin.com/in/kyle-gough-709a3754/" class="linkedin"><i class="bi bi-linkedin"></i></a>
+        <a href="https://github.com/kylegough3" class="github"><i class="bi bi-github"></i></a>
       </div>
 
     </div>
